samples/_failures_safe/1761450063_d33f53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2a11e43.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_f2a11e43.c:144:13: error: expected declaration or statement at end of input
  144 |             dijkstra(graph, start);
      |             ^~~~~~~~
./samples/SAFE/__tmp_f2a11e43.c:144:13: error: expected declaration or statement at end of input
